Fixed horizontal scrolling

--- a/src/styles/scrollingheader.scss
+++ b/src/styles/scrollingheader.scss
@@ -2,6 +2,7 @@
 
 .scrolling-header {
   // position: relative;
+  overflow-x: hidden;
 
   top: 20vh;
   // transform: translate(0, -25%);
